<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.userinfo.UserInfoFragment">

    <TextView
        android:id="@+id/user_info_title"
        style="@style/Theme.ShopKeeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_view_element_top_bottom_padding"
        android:text="@string/text_current_logged_in_user"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profilePictureIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_account_profile_picture"
        android:paddingHorizontal="@dimen/list_view_element_start_end_padding"
        android:paddingVertical="@dimen/list_view_element_top_bottom_padding"
        android:scaleType="fitCenter"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_view_element_start_end_padding"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/displayNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_view_element_start_end_padding"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_logout" />
</LinearLayout>