<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createListCL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/list_view_element_start_end_padding"
        android:paddingVertical="@dimen/list_view_element_top_bottom_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inputListTitleTV"
            style="@style/Theme.ShopKeeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_input_list_details"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/listNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_list_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/listNotesET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_list_notes"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>