<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/displayItemLL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/list_view_element_start_end_padding"
    android:paddingVertical="@dimen/list_view_element_top_bottom_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="70"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemNameTV"
            style="@style/Theme.ShopKeeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/itemNotesTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itemPriceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:textSize="20sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/favouriteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="false"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:switchPadding="0dp"
        android:text="@string/switch_text_favourite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/removeItemFromListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/text_remove" />

</LinearLayout>