<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/viewListsAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_view_lists"
            android:onClick="selectFavourites"
            app:backgroundTint="?attr/colorAccent"
            app:borderWidth="1dp"
            app:srcCompat="@drawable/ic_baseline_list_alt_24"
            app:tint="#000000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createNewListAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_create_list"
            app:backgroundTint="@color/confirmation"
            app:borderWidth="1dp"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            app:tint="#000000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exitAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/content_description_exit"
            android:onClick="createList"
            app:backgroundTint="#424242"
            app:borderWidth="1dp"
            app:srcCompat="@drawable/ic_baseline_clear_24"
            app:tint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>